# image-search.backend

./: .gitignore  Dockerfile  pyproject.toml
src/: context.py  exceptions.py  main.py  settings.py
src/image_search/: exceptions.py  model.py  persistence.py  service.py  utils.py
src/routers/: image_search.py
src/utils/: cosmos_client.py  custom_search_service.py
